counts: read the station data from its own path
The station data and the count data do not live in the same directory,
so far both had to be staged into one. --stations now points at the
xlsx directly and --input is only searched for the monthly count data.

That makes --input a directory of the raw data, which must not be
written to. Two things did:

readCountData extracted every archive next to its source. The extraction
is not needed at all, the parser decompresses by file extension, so the
archives are read directly now.

The output directory was never created, it only happened to exist. The
month directories of the daily counts already are created, the output
directory is now as well.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>